# Face_recognation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  bootstrap.py  config.py  deps.py  main.py  models.py  schemas.py  security.py
app/api/: auth.py  pages.py  persons.py  recognition.py  settings.py  webhook.py
app/services/: face_engine.py  liveness.py  matching.py  outbox_worker.py  recognition.py  storage.py  webhook.py
app/static/js/: app.js
app/templates/: base.html  dashboard.html  login.html
tests/: conftest.py  test_auth.py  test_liveness.py  test_matching.py  test_recognition_api.py  test_webhook.py
